--- a/src/sass/_pickSection.scss
+++ b/src/sass/_pickSection.scss
@@ -35,6 +35,10 @@
         width: 8rem;
         height: 8rem;
         border-radius: 10rem;
+        &:hover {
+          box-shadow: 0 0 0 0.25rem $color-alert;
+          border-radius: 10rem;
+        }
       }
     }
     &_img:hover {
@@ -76,6 +80,11 @@
       width: 8rem;
       height: 8rem;
       border-radius: 10rem;
+      &:hover {
+        box-shadow: 0 0 0 0.25rem $color-alert;
+        border-radius: 10rem;
+        filter: grayscale(100%);
+      }
     }
 
     &_text {
