Added greyscale and border to UserSide champion hover.

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -167,6 +167,9 @@ body {
     .pickSection_userSide_img {
       width: 12rem;
       height: 12rem; }
+      .pickSection_userSide_img:hover {
+        box-shadow: 0 0 0 0.25rem #c69963;
+        filter: grayscale(100%); }
     .pickSection_userSide_text {
       text-align: center;
       font-size: 2rem;
