--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -86,9 +86,9 @@ body {
 .pickSection {
   display: grid;
   grid-area: pickSection;
-  grid-template-columns: minmax(1rem, 3fr) minmax(min-content, 20rem) minmax(min-content, 60rem) minmax(min-content, 20rem) minmax(1rem, 1fr);
+  grid-template-columns: minmax(1rem, 1fr) minmax(min-content, 5rem) minmax(min-content, 20rem) minmax(min-content, 60rem) minmax(1rem, 1.5fr);
   grid-template-rows: 8vh 18rem 45vh;
-  grid-template-areas: ". . pickSection_searchBar . ." ". pickSection_userSide pickSection_champSelect . ." ". pickSection_opponentSide pickSection_champSelect . .";
+  grid-template-areas: ". . . pickSection_searchBar ." ". pickSection_userSide_title pickSection_userSide pickSection_champSelect ." ". pickSection_opponentSide_title pickSection_opponentSide pickSection_champSelect .";
   grid-gap: 1rem;
   background-color: #242933; }
   .pickSection_champSelect {
@@ -132,9 +132,13 @@ body {
     box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5); }
     .pickSection_opponentSide_title {
       grid-area: pickSection_opponentSide_title;
-      justify-self: center;
-      align-self: end;
-      font-size: 3rem; }
+      display: flex;
+      justify-content: start;
+      align-items: flex-end; }
+      .pickSection_opponentSide_title_text {
+        font-size: 6rem;
+        writing-mode: vertical-rl;
+        transform: rotate(180deg); }
     .pickSection_opponentSide_img {
       margin-top: 1rem;
       width: 8rem;
@@ -158,8 +162,11 @@ body {
     .pickSection_userSide_title {
       grid-area: pickSection_userSide_title;
       justify-self: center;
-      align-self: end;
-      font-size: 3rem; }
+      align-self: center; }
+      .pickSection_userSide_title_text {
+        font-size: 6rem;
+        writing-mode: vertical-rl;
+        transform: rotate(180deg); }
     .pickSection_userSide_img {
       width: 12rem;
       height: 12rem;
