--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -26,9 +26,9 @@
       height: 5rem;
       border-radius: 2px;
       border-radius: 2px;
-      background-color: #b1b8bf;
+      background-color: #e5e5e5;
       border: 0;
-      color: #0c3354;
+      color: #1671ac;
       font-size: 1.5rem;
       font-weight: bold;
     }
@@ -45,9 +45,9 @@
       width: 8rem;
       height: 5rem;
       border-radius: 2px;
-      background-color: #0c3354;
+      background-color: #1671ac;
       border: 0;
-      color: #b1b8bf;
+      color: #e5e5e5;
       font-size: 1.5rem;
       font-weight: bold;
     }
