--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -2,11 +2,12 @@
 $color-alert: #c69963;
 $color-primary-dark: #b28451;
 
-$color-secondary: #283754;
+$color-secondary: #242933;
 //101d2c
 //1e222b
 //242933
 //1671ac
+//283754
 $color-secondary-light: #232325;
 //#dee5ee
 //242933
@@ -22,6 +23,7 @@ $color-scrollbar-background: #27282b;
 // FONT VARIABLES
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
+$font-special: "Niramit", sans-serif;
 
 /// RESPONSIVE  BREAKPOINTS
 $bp-xl: 1400px;
