--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -14,7 +14,7 @@
     align-self: center;
     &_text {
       font-size: 3.8rem;
-      font-family: "Niramit", sans-serif;
+      font-family: $font-special;
     }
   }
   &_login {
