--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -7,7 +7,7 @@
     minmax(min-content, 10rem) minmax(1rem, 1fr);
   grid-template-areas: ". navBar_logo . navBar_login navBar_signUp .";
 
-  background-color: $color-secondary;
+  background-color: $color-background-minority;
   &_logo {
     grid-area: navBar_logo;
     justify-self: center;
@@ -34,7 +34,7 @@
     }
 
     &_button:hover {
-      background-color: $color-primary-dark;
+      background-color: $color-foreground-dark;
     }
   }
   &_signUp {
@@ -52,7 +52,7 @@
       font-weight: bold;
     }
     &_button:hover {
-      background-color: $color-primary-dark;
+      background-color: $color-foreground-dark;
       color: #0c3354;
     }
   }
